--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -11,7 +11,7 @@ F77_TESTS = \
 	f77demo-shared.test f77demo-make.test f77demo-exec.test
 
 COMMON_TESTS = \
-	assign.test link.test link-2.test nomode.test \
+	link.test link-2.test nomode.test \
 	quote.test sh.test suffix.test tagtrace.test \
 	cdemo-static.test cdemo-make.test cdemo-exec.test \
 	demo-static.test demo-make.test demo-exec.test \
