--- a/config/ltmain.in
+++ b/config/ltmain.in
@@ -1019,8 +1019,18 @@ extern \"C\" {
 	    export_symbols="$output_objdir/$output.exp"
 	    $run $RM $export_symbols
 	    $run eval "${SED} -n -e '/^: @PROGRAM@$/d' -e 's/^.* \(.*\)$/\1/p' "'< "$nlist" > "$export_symbols"'
+	    case $host in
+	    *cygwin* | *mingw* )
+	      $run eval "${SED} -e '1iEXPORTS'"' < "$export_symbols" > "$output_objdir/$output.def"'
+	      ;;
+	    esac
 	  else
 	    $run eval "${SED} -e 's/\([][.*^$]\)/\\\1/g' -e 's/^/ /' -e 's/$/$/'"' < "$export_symbols" > "$output_objdir/$output.exp"'
+	    case $host in
+	    *cygwin | *mingw* )
+	      $run eval "${SED} -e '1iEXPORTS'"' < "$output_objdir/$output.exp" > "$output_objdir/$output.def"'
+	      ;;
+	    esac
 	    $run eval '$GREP -f "$output_objdir/$output.exp" < "$nlist" > "$nlist"T'
 	    $run eval '$MV "$nlist"T "$nlist"'
 	  fi
@@ -1142,8 +1152,21 @@ static const void *lt_preloaded_setup() {
 
 	# Transform the symbol file into the correct name.
 	symfileobj="$output_objdir/${my_outputname}S.$objext"
-	compile_command=`$echo "X$compile_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
-	finalize_command=`$echo "X$finalize_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
+	case $host in
+	*cygwin* | *mingw* )
+	  if test -f "$output_objdir/$my_outputname.def"; then
+	    compile_command=`$echo "X$compile_command" | $Xsed -e "s%@SYMFILE@%$output_objdir/$my_outputname.def $symfileobj%"`
+	    finalize_command=`$echo "X$finalize_command" | $Xsed -e "s%@SYMFILE@%$output_objdir/$my_outputname.def $symfileobj%"`
+	  else
+	    compile_command=`$echo "X$compile_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
+	    finalize_command=`$echo "X$finalize_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
+	  fi
+	  ;;
+	*)
+	  compile_command=`$echo "X$compile_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
+	  finalize_command=`$echo "X$finalize_command" | $Xsed -e "s%@SYMFILE@%$symfileobj%"`
+	  ;;
+	esac
 	;;
       *)
 	func_fatal_error "unknown suffix for \`$my_dlsyms'"
@@ -5828,8 +5851,10 @@ EOF
 	esac
 	case $host in
 	  *cygwin* | *mingw* )
-	    cwrappersource=`$echo ${objdir}/lt-${output}.c`
-	    cwrapper=`$echo ${output}.exe`
+	    output_name=`basename $output`
+	    output_path=`dirname $output`
+	    cwrappersource=`$echo "$output_path/$objdir/lt-$output_name.c"`
+	    cwrapper=`$echo "$output_path/$output_name.exe"`
 	    $RM $cwrappersource $cwrapper
 	    trap "$RM $cwrappersource $cwrapper; exit $EXIT_FAILURE" 1 2 15
 
